--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col my-auto">
-                <h1 class="display-4 logo-font">
+                <h1 class="display-4 logo-font w-50">
                     The new Fender American range is here!
                 </h1>
                 <div class="my-5">
