--- a/static/css/base.css
+++ b/static/css/base.css
@@ -29,16 +29,14 @@ body {
 }
 
 .shop-now-button {
-    background: black;
-    color: white;
     min-width: 260px;
 }
 
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus {
-    background: #222;
-    color: white;
+    background: #222 !important;
+    color: white !important;
 }
 
 .text-black {
@@ -49,26 +47,31 @@ body {
     border: 1px solid black !important;
 }
 
+.bg-black {
+    background: #000 !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
     .container {
-      max-width: 80%;
+        max-width: 80%;
     }
-  }
+}
   
   /* fixed top navbar only on medium and up */
-  @media (min-width: 992px) {
-      .fixed-top-desktop-only {
-          position: fixed;
-          top: 0;
-          right: 0;
-          left: 0;
-          z-index: 1030;
-      }
-  
-      .header-container {
-          padding-top: 164px;
-      }
-  }
+@media (min-width: 992px) {
+    .fixed-top-desktop-only {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+
+    .header-container {
+        padding-top: 164px;
+    }
+}
+
