--- a/static/css/base.css
+++ b/static/css/base.css
@@ -26,6 +26,9 @@ body {
 
 .main-logo-link {
     width: fit-content;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    padding-top: 8px !important;
 }
 
 .shop-now-button {
@@ -64,6 +67,18 @@ body {
 a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* -------------------------------- Media Queries */
