--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,15 +3,14 @@ html {
 }
 
 body {
-    background: no-repeat center center fixed;
+    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: "Lato";
+    font-family: 'Lato';
 }
 
 /* from Bulma */
-
 .icon {
     align-items: center;
     display: inline-flex;
@@ -26,20 +25,40 @@ body {
 
 .main-logo-link {
     width: fit-content;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    padding-top: 8px !important;
 }
 
 .shop-now-button {
+    background: black;
+    color: white;
     min-width: 260px;
+}
+
+.btn-black {
+    background: black;
+    color: white;
+}
+
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
 }
 
 .shop-now-button:hover,
 .shop-now-button:active,
-.shop-now-button:focus {
-    background: #222 !important;
-    color: white !important;
+.shop-now-button:focus,
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+    background: #222;
+    color: white;
 }
 
 .text-black {
@@ -85,12 +104,12 @@ a.category-badge > span.badge:hover {
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-    .container {
-        max-width: 80%;
-    }
+  .container {
+    max-width: 80%;
+  }
 }
-  
-  /* fixed top navbar only on medium and up */
+
+/* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
         position: fixed;
