added adjust bag and remove from bag views, and calc subtotal template filter

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,11 +51,11 @@
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
                                     <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
-                                        <option value="1" selected>1m</option>
-                                        <option value="1.5">1.5m</option>
-                                        <option value="2">2m</option>
-                                        <option value="3">3m</option>
-                                        <option value="5">5m</option>
+                                        <option value="1m" selected>1m</option>
+                                        <option value="1.5m">1.5m</option>
+                                        <option value="2m">2m</option>
+                                        <option value="3m">3m</option>
+                                        <option value="5m">5m</option>
                                     </select>
                                 </div>
                             {% endif %}
