--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Lato';
 }
 
-/* from Bulma */
+/* -------------------------------- from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -100,6 +100,23 @@ a.category-badge > span.badge:hover {
 .update-link,
 .remove-item {
     cursor: pointer;
+}
+
+/* -------------------------------- Bootstrap toasts*/
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+
 }
 
 /* -------------------------------- Media Queries */
