added reviews app and templates for add/edit/delete reviews

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,7 @@ body {
 .btn-black:active,
 .btn-black:focus {
     background: #222;
-    color: white;
+    color: white !important;
 }
 
 .text-black {
