--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -15,19 +15,19 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
-                <h5 class="text-muted">Delete a Product</h5>
+                <h2 class="logo-font mb-4">Product Reviews</h2>
+                <h5 class="text-muted">Edit a Review</h5>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-6">
-                <form action="{% url 'delete_product' product.id %}" method="POST" class="form mb-2" enctype="multipart/form-data">
+                <form action="{% url 'edit_review' %}" method="POST" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Delete Product</button>
+                        <button class="btn btn-black rounded-0" type="submit">Update Review</button>
                     </div>
                 </form>
             </div>
