--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
   <body>
     <header class="container-fluid fixed-top">
       <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+        <div class="col-12 col-lg-4 my-auto pl-2 py-lg-0 text-center text-lg-left">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
             <h2 class="logo-font text-black my-0">London Music Exchange</h2>
           </a>
@@ -85,18 +85,18 @@
             </li>
             <li class="list-inline-item">
               <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
-                  <div class="text-center">
-                      <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                      <p class="my-0">
-                          {% if grand_total %}
-                              £{{ grand_total|floatformat:2 }}
-                          {% else %}
-                              £0.00
-                          {% endif %}
-                      </p>
-                  </div>
+                <div class="text-center">
+                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                    <p class="my-0">
+                      {% if grand_total %}
+                          £{{ grand_total|floatformat:2 }}
+                      {% else %}
+                          £0.00
+                      {% endif %}
+                    </p>
+                </div>
               </a>
-          </li>
+            </li>
           </ul>
         </div>
       </div>
