--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -92,6 +92,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div>
+                                
+                                {% for r in reviews %}
+                                    <h1> {{ r.review_title }} </h1>
+                                    <h1> {{ r.review_body }} </h1>
+                                {% endfor %}
+                            </div>
 
                             <div class="col{% if s %}-12 mt-2{% endif %}">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
