--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -38,7 +38,7 @@
                     <table class="table table-sm table-borderless">
                         <thead>
                             <tr>
-                                <th>Ordr Number</th>
+                                <th>Order Number</th>
                                 <th>Date</th>
                                 <th>Items</th>
                                 <th>Order Total</th>
