--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -29,11 +29,17 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
                     <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">Default Delivery Information</p>
+                <p class="text-muted">Order History</p>
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -42,6 +48,7 @@
                                 <th>Date</th>
                                 <th>Items</th>
                                 <th>Order Total</th>
+                                <th>Review</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -66,6 +73,11 @@
                                         </ul>
                                     </td>
                                     <td>£{{ order.grand_total }}</td>
+                                    <td>
+                                        <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'add_review' %}">
+                                            <span class="text-uppercase">Add Review</span>
+                                        </a>
+                                    </td>
                                 </tr>
                             {% endfor %}
                         </tbody>
