finished CRUD functionality for reviews app

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -118,7 +118,7 @@
                             <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'edit_review' r.id %}">
                                 <span class="text-uppercase">Edit Review</span>
                             </a>
-                            <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'delete_review' product.id %}">
+                            <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'delete_review' r.id %}">
                                 <span class="text-uppercase">Delete Review</span>
                             </a>
                         {% endif %}
