--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -70,6 +70,26 @@
                         <p class="my-0"><strong>£{{ grand_total | floatformat:2 }}</strong></p>
                     </div>
                 </div>
+                <!-- <div class="row">
+                    <h5 class="mt-4 ml-3">
+                        Do you have a discount code? Enter below to claim your discount!
+                    </h5>
+                    <form action="" method="POST" id="coupon-form">
+                        {% csrf_token %}
+                        <fieldset class="px-3">
+                            <legend class="fieldset-label small text-black px-2 w-auto">Coupon</legend>
+                            <input type="text" class="form-control">
+                        </fieldset>
+                        <div class="submit-button text-right mt-2 mb-2">
+                            <button id="add-coupon" class="btn btn-black rounded-0">
+                                <span class="font-weight-bold">Add Coupon</span>
+                                <span class="icon">
+                                    <i class="fas fa-percent"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </form>
+                </div> -->
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
@@ -100,9 +120,6 @@
                                 </label>
 							{% endif %}
 						</div>
-                    </fieldset>
-                    <fieldset class="px-3">
-                        <legend class="fieldset-label small text-black px-2 w-auto">Coupon</legend>
                     </fieldset>
                     <fieldset class="px-3">
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
@@ -151,4 +168,16 @@
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
     {{ client_secret|json_script:"id_client_secret" }}
     <script type="text/javascript" src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+    <!-- <script type="text/javascript">
+        // Add coupon to order
+
+        var form = document.getElementById('coupon-form');
+        
+        form.addEventListener('submit', function(ev) {
+            ev.preventDefault();
+            $('#add-coupon').attr('disabled', true);
+            var csrfToken = "{{ csrf_token }}";
+            var url = '/checkout/add_coupon/'
+        });
+    </script> -->
 {% endblock%}
