--- a/blogs/templates/blogs/edit_blog.html
+++ b/blogs/templates/blogs/edit_blog.html
@@ -26,7 +26,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-right">
-                        <!-- <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a> -->
+                        <a class="btn btn-outline-black rounded-0" href="{% url 'blogs' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Blog</button>
                     </div>
                 </form>
