--- a/blogs/templates/blogs/blogs.html
+++ b/blogs/templates/blogs/blogs.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row page-header">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Blog</h2>
                 <hr class="w-50 mb-1">
@@ -51,4 +51,13 @@
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
 {% endblock %}
