--- a/blogs/templates/blogs/blogs.html
+++ b/blogs/templates/blogs/blogs.html
@@ -26,7 +26,7 @@
                             <h3><u>
                                 {{ b.blog_title }}
                             </u></h3>
-                            <h6>
+                            <h6 class="text-muted">
                                 Blog post by: {{ b.blog_by }}
                             </h6>
                             <p>
