--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container">
-        <div class="row content-margin-top">
+        <div class="row page-header">
             <div class="col-12 col-md-6">
                 <hr>
                 <h2 class="logo-font mb-4">Product Management</h2>
