--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -111,9 +111,14 @@
                     <h5 class="logo-font">Reviews</h5>
                     <hr>                        
                     {% for r in reviews %}
-                        <h6><u>{{ r.review_title }}</u></h6>
-                        <p>{{ r.review_body }}</p>
-                        <p><strong>Review by:</strong> {{ r.review_by }}</p>
+                    <!-- This still needs work, if not remove the if/else statement and the <p> in the else statement -->
+                        {% if r %}
+                            <h6><u>{{ r.review_title }}</u></h6>
+                            <p>{{ r.review_body }}</p>
+                            <p><strong>Review by:</strong> {{ r.review_by }}</p>
+                        {% else %}
+                            <p>There are currently no reviews for this product</p>
+                        {% endif %}
                         {% if request.user.is_superuser %}
                             <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'edit_review' r.id %}">
                                 <span class="text-uppercase">Edit Review</span>
