--- a/static/css/base.css
+++ b/static/css/base.css
@@ -183,42 +183,6 @@ input[name="q"]::placeholder {
     }
 }
 
-/* Media query to fix page header being hidden on different screen sizes */
-/* @media screen and (max-width: 360px){
-    .page-header {
-        margin-top: 150px;
-    }
-}
-
-@media screen and (min-width: 361px) and (max-width: 418px){
-    .page-header {
-        margin-top: 90px;
-    }
-}
-  
-@media screen and (min-width: 419px) and (max-width: 440px){
-    .page-header {
-        margin-top: 50px;
-    }
-}
-
-@media screen and (min-width: 441px) and (max-width: 464px){
-    .page-header {
-        margin-top: 40px;
-    }
-}
-@media screen and (min-width: 465px) and (max-width: 991px){
-    .page-header {
-        margin-top: 20px;
-    }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1400px){
-    .page-header {
-        margin-top: 25px;
-    }
-} */
-
 /* Media query to fix page header being partially hidden on smaller screen sizes */
 @media screen and (min-width:270px) and (max-width: 287px){
     .page-header {
@@ -258,21 +222,27 @@ input[name="q"]::placeholder {
 }
 
 /* Media query to fix product image being partially hidden on smaller screen sizes */
-@media screen and (max-width: 362px){
+@media screen and (max-width:393px){
     .content-margin-top {
         margin-top: 120px;
     }
 }
 
-@media screen and (min-width: 363px) and (max-width: 418px){
+@media screen and (min-width:394px) and (max-width: 418px){
     .content-margin-top {
         margin-top: 60px;
     }
 }
 
-@media screen and (min-width: 419px) and (max-width: 464px){
+@media screen and (min-width: 419px) and (max-width: 449px){
     .content-margin-top {
-        margin-top: 20px;
+        margin-top: 60px;
+    }
+}
+
+@media screen and (min-width: 450px) and (max-width: 464px){
+    .content-margin-top {
+        margin-top: 10px;
     }
 }
 /* -------------------------------- Allauth form formatting */
