--- a/blogs/templates/blogs/add_blog.html
+++ b/blogs/templates/blogs/add_blog.html
@@ -15,7 +15,7 @@
         <div class="row page-header">
             <div class="col-12 col-md-6">
                 <hr>
-                <h2 class="logo-font mb-4">Blog</h2>
+                <h2 class="logo-font text-blue mb-4">Blog</h2>
                 <h5 class="text-muted">Add a Blog Post</h5>
                 <hr>
             </div>
@@ -26,8 +26,8 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Blog</button>
+                        <a class="btn btn-outline-blue rounded-0" href="{% url 'home' %}">Cancel</a>
+                        <button class="btn btn-blue rounded-0" type="submit">Add Blog</button>
                     </div>
                 </form>
             </div>
