--- a/blogs/templates/blogs/blogs.html
+++ b/blogs/templates/blogs/blogs.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row page-header">
             <div class="col text-center mt-3">
-                <h2 class="logo-font">Blog</h2>
+                <h2 class="logo-font text-blue">Blog</h2>
                 <hr class="w-50 mb-1">
             </div>
         </div>
@@ -33,10 +33,10 @@
                                 {{ b.blog_body | linebreaks }}
                             </p>
                             {% if request.user.is_superuser %}
-                                <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'edit_blog' b.id %}">
+                                <a class="btn btn-outline-blue rounded-0 mt-2 mb-2" href="{% url 'edit_blog' b.id %}">
                                     <span class="text-uppercase">Edit Blog</span>
                                 </a>
-                                <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'delete_blog' b.id %}">
+                                <a class="btn btn-outline-blue rounded-0 mt-2 mb-2" href="{% url 'delete_blog' b.id %}">
                                     <span class="text-uppercase">Delete Blog</span>
                                 </a>
                             {% endif %}
@@ -46,9 +46,9 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
+    <div class="btt-button shadow-sm rounded-0 border border-blue">
         <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+            <i class="fas fa-arrow-up text-blue mx-auto my-auto"></i>
         </a>
     </div>
 {% endblock %}
