--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,12 @@
     <div class="container home-container h-100">
         <div class="row h-100">
             <div class="col my-auto">
-                <h1 class="display-4 logo-font w-50">
+                <h1 class="display-5 hero-text text-blue w-50">
                     The new Fender American range is here!
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button border-black btn btn-lg rounded-0 py-3">Shop Now</a>
+                        <a href="{% url 'products' %}" class="shop-now-button border-blue btn btn-lg rounded-0 py-3">Shop Now</a>
                     </h4>
                 </div>
             </div>
