--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,8 +28,8 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                    <p class="lead mb-0 font-weight-bold">{{ product.name }}</p>
+                    <p class="lead mb-0 text-left text-blue font-weight-bold">£{{ product.price }}</p>
                     {% if product.category %}
                     <p class="small mt-1 mb-0">
                         <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -48,7 +48,7 @@
                             <a class="text-danger ml-2" href="{% url 'delete_product' product.id %}">Delete</a>
                         </small>
                     {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
+                    <p class="mt-3">{{ product.description | linebreaks }}</p>
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
@@ -70,7 +70,7 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0"
+                                            <button class="decrement-qty btn btn-blue rounded-0"
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
@@ -82,7 +82,7 @@
                                             data-item_id="{{ product.id }}" 
                                             id="id_qty_{{ product.id }}">
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-black rounded-0"
+                                                <button class="increment-qty btn btn-blue rounded-0"
                                                 data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-plus"></i>
@@ -93,13 +93,13 @@
                                 </div>
                             </div>
                             <div class="col{% if s %}-12 mt-2{% endif %}">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                <a href="{% url 'products' %}" class="btn btn-outline-blue rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
                                     </span>
                                     <span class="text-uppercase">Keep Shopping</span>
                                 </a>
-                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn btn-blue rounded-0 text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
@@ -108,7 +108,7 @@
                 </div>
                 <hr>
                 <div class="col">  
-                    <h5 class="logo-font">Reviews</h5>
+                    <h5 class="logo-font text-blue">Reviews</h5>
                     <hr>                        
                     {% for r in reviews %}
                     <!-- This still needs work, if not remove the if/else statement and the <p> in the else statement -->
@@ -120,10 +120,10 @@
                             <p>There are currently no reviews for this product</p>
                         {% endif %}
                         {% if request.user.is_superuser %}
-                            <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'edit_review' r.id %}">
+                            <a class="btn btn-outline-blue rounded-0 mt-2 mb-2" href="{% url 'edit_review' r.id %}">
                                 <span class="text-uppercase">Edit Review</span>
                             </a>
-                            <a class="btn btn-outline-black rounded-0 mt-2 mb-2" href="{% url 'delete_review' r.id %}">
+                            <a class="btn btn-outline-blue rounded-0 mt-2 mb-2" href="{% url 'delete_review' r.id %}">
                                 <span class="text-uppercase">Delete Review</span>
                             </a>
                         {% endif %}
