--- a/templates/base.html
+++ b/templates/base.html
@@ -44,15 +44,15 @@
       <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
         <div class="col-12 col-lg-4 my-auto pl-2 py-lg-0 text-center text-lg-left">
           <a href="{% url 'home' %}" class="nav-link main-logo-link">
-            <h2 class="logo-font text-black my-0">London Music Exchange</h2>
+            <h2 class="logo-font title-font text-blue my-0">London Music Exchange</h2>
           </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <form method="GET" action="{% url 'products' %}">
             <div class="input-group w-100">
-                <input class="form-control border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <input class="form-control border-blue rounded-0" type="text" name="q" placeholder="Search our site">
                 <div class="input-group-append">
-                    <button class="form-control btn btn-black border-black rounded-0" type="submit">
+                    <button class="form-control btn btn-blue border-blue rounded-0" type="submit">
                         <span class="icon">
                             <i class="fas fa-search"></i>
                         </span>
@@ -64,7 +64,7 @@
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
             <li class="list-inline-item dropdown">
-              <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a href="#" class="text-blue nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
                   <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My Account</p>
@@ -84,7 +84,7 @@
               </div>
             </li>
             <li class="list-inline-item">
-              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-blue{% endif %} nav-link" href="{% url 'view_bag' %}">
                 <div class="text-center">
                   <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                     <p class="my-0">
@@ -110,7 +110,7 @@
         </nav>
       </div>
       <div class="row text-center" id="delivery-banner">
-        <div class="col bg-black text-white">
+        <div class="col bg-blue text-white">
           <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
         </div>
       </div>
